--- a/style.css
+++ b/style.css
@@ -52,11 +52,87 @@ body {
     font-family: Arial, sans-serif;
 }
 
-/* adjust audio player width to fill full width of page */
 audio {
     width: 100%;
     max-width: 100%;
     border-radius: 10px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out, background-color 1s ease-in-out;
+    background-color: transparent;
+}
+
+audio:hover {
+    opacity: 1 !important;
     background-color: #ffffff;
+    transition: opacity 0s ease-in-out, background-color 0s ease-in-out;
+}
+
+audio:not(:hover)::-webkit-media-controls {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out, background-color 1s ease-in-out;
+    background-color: transparent;
+}
+
+audio.show-controls::-webkit-media-controls {
+    opacity: 1;
+    background-color: #ffffff;
+    transition: opacity 0s ease-in-out, background-color 0s ease-in-out;
+}
+
+.dropbtn {
+    background-color: #ff6347;
+    color: white;
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* Style the dropdown content (hidden by default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    white-space: nowrap;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Style the dropdown links */
+.dropdown-content button {
+    cursor: pointer;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    background-color: white;
+    border: none;
+    width: 100%;
+    text-align: left;
+}
+
+/* Change the background color of dropdown links on hover */
+.dropdown-content button:hover {
+    background-color: #f1f1f1;
+}
+
+/* Style the active dropdown link */
+.dropdown-content button.active {
+    background-color: #ff6347;
+    color: white;
+}
+
+.dropdown {
+    position: absolute;
+    top: 10;
+    left: 10;
+    transition: opacity 0s ease-in-out;
+}
+
+.dropdown.hide-controls {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
 }
